...
    val icon: androidx.compose.ui.graphics.vector.ImageVector,
) {
    object Welcome : Screen("welcome", "Welcome", Icons.Default.Sensors)

    object IdentityUnlock : Screen("identity_unlock", "Restore Identity", Icons.Default.Sensors)

    object Chats : Screen("chats", "Chats", Icons.Default.Chat)

    object Announces : Screen("announce_stream", "Announces", Icons.Default.Sensors)

    object Contacts : Screen("contacts", "Contacts", Icons.Default.People)

    object Map : Screen("map", "Map", Icons.Default.Map)
...
